--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
             <% } %>
 
             <a class="nav-link" href="/"
-              ><i class="fa fa-lg fa-home"></i> Home
+              ><i class="fa fa-lg fa-h-square"></i> Home
               <span class="sr-only">(current)</span></a
             >
           </li>
@@ -46,7 +46,7 @@
             <% } %>
 
             <a class="nav-link" href="/about"
-              ><i class="fa fa-lg fa-info"></i> About</a
+              ><i class="fa fa-lg fa-ban"></i> About</a
             >
           </li>
 
@@ -57,7 +57,7 @@
             <% } %>
 
             <a class="nav-link" href="/products"
-              ><i class="fa fa-lg fa-briefcase"></i> Products</a
+              ><i class="fa fa-lg fa-product-hunt"></i> Products</a
             >
           </li>
 
@@ -68,7 +68,7 @@
             <% } %>
 
             <a class="nav-link" href="/services"
-              ><i class="fa fa-lg fa-birthday-cake"></i> Services</a
+              ><i class="fa fa-lg fa-amazon"></i> Services</a
             >
           </li>
 
@@ -79,7 +79,7 @@
             <% } %>
 
             <a class="nav-link" href="/contact"
-              ><i class="fa fa-lg fa-phone"></i> Contact</a
+              ><i class="fa fa-lg fa-address-book"></i> Contact</a
             >
           </li>
         </ul>
@@ -105,6 +105,10 @@
         </p>
       </div>
     </div>
+    <footer><nav class="navbar fixed-bottom navbar-light bg-light">
+        <h4>&copy;Copy Right 2019
+        Abdul Shukor</h4>
+</nav></footer>
 
     <!-- JavaScript Section -->
     <script src="jquery/dist/jquery.min.js"></script>
