--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <h1 class="display-4">Welcome to <%= title %></h1>
 
           <% if (title == "Contact") { %>
-          <a class="btn btn-primary" href="/contact-list" role="button">Contact List</a>
+          <a class="btn btn-primary" href="/contact-list" role="button">Favourite Things</a>
         <% } %>
        
       </div>
