--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
+  <!-- footer-->
+  
   <footer><nav class="navbar fixed-bottom navbar-light bg-light">
         <h4>&copy;Copy Right 2019
         Abdul Shukor</h4>
